# injectpy

./: .gitignore  LICENSE  PROPOSALS.md  README.md  setup.cfg  setup.py
docs/: attrs.rst  conf.py  index.rst  lifetime.rst  optional.rst
src/injectpy/: __init__.py  exceptions.py  kernel.py  module.py  reflection.py  types.py  utils.py
tests/: dataclass_test.py  intercepting_test.py  kernel_test.py  module_test.py  new_type_test.py  scoping_test.py  types.py
tests/acceptance/: attrs_test.py  intercepting_test.py  kernel_test.py  module_test.py  new_type_test.py  scoping_test.py
tests/patterns/: attrs_test.py  dataclass_test.py  new_type_test.py
tests/unit/: utils_test.py
