[metadata]
name = injectpy
version = 0.0.1
license = MIT
author = Rafal Stozek
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Development Status :: 1 - Planning


[options]
zip_safe = False
python_requires = >= 3.5.2


[aliases]
test=pytest


[mypy]
disallow_untyped_defs = true
ignore_missing_imports = true


[coverage:report]
exclude_lines =
    pragma: no cover
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:


[tool:pytest]
addopts = --cov=injectpy --cov-report=xml --cov-report=term:skip-covered


[tool:isort]
multi_line_output=3
line_length=88
include_trailing_comma=True
